# AlwaysBindWindow

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: group.rs  hotkey_dialog.rs  i18n.rs  main.rs  overlay.rs  picker.rs  settings.rs  tray.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
